<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/movieListFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.devon.isearch.view.MovieListFragment"
        android:label="fragment_movie_list"
        tools:layout="@layout/fragment_movie_list" >
        <action
            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.devon.isearch.view.MovieDetailFragment"
        android:label="fragment_movie_detail"
        tools:layout="@layout/fragment_movie_detail" >
        <argument
            android:name="index"
            app:argType="integer" />
    </fragment>
</navigation>